started working on put endpoint for edit solution
